Refactor code and extension

--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
@@ -1,5 +1,4 @@
-﻿@using StudentsSystem.Common
-@model StudentsSystem.Web.ViewModels.Event.AllViewModel
+﻿@model StudentsSystem.Web.ViewModels.Event.AllViewModel
 @{
     this.ViewData["Title"] = "All Events";
 }
