--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
@@ -16,7 +16,7 @@
         @foreach (var item in Model.Events)
         {
             <h3>
-                <a href="/Events/Details?id=@item.Id">@item.Name</a>
+                <a href="/Event/Details?id=@item.Id">@item.Name</a>
             </h3>
         }
     </div>
