--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="All">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Homeworks" asp-action="Index">Homeworks</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Homework" asp-action="All">Homeworks</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="All">Events</a>
