--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
@@ -6,6 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Hello form Details</h1>
+</div>
 <hr />
 <div class="course-details d-flex justify-content-between row">
     <div class="course-data col-md-5">
@@ -16,7 +17,8 @@
         <div class="card-header">Course Description: @Model.Description</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Course" asp-action="All">Back To All</a>
-            <a href="/Event/Create?courseId=@Model.Id">Create Event</a> 
+            <a class="nav-link bg-success text-white" href="/Event/Create?courseId=@Model.Id">Create Event</a>
+            <a class="nav-link bg-success text-white" asp-area="" asp-controller="Homework" asp-action="Create" asp-route-courseId="@Model.Id">Create Homework</a>
         </div>
     </div>
 </div>
