--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
@@ -5,7 +5,7 @@
     this.ViewData["Title"] = "Create event";
 }
 
-<form action="/Event/CreatePost?courseId=@Model.CourseId" method="post">
+@*<form action="/Event/CreatePost?courseId=@Model.CourseId" method="post">
     <div>
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -13,14 +13,31 @@
     </div>
     <div>
         <label asp-for="Date"></label>
-        <input type="datetime" asp-for="Date" class="form-control"></input>
+        <input type="datetime" asp-for="Date" class="form-control">
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
-        <form asp-controller="Event" asp-action="CreatePost" method="post">
-            <button type="submit" class="btn bg-success text-white">Create Event</button>
-        </form>
+        <a class="btn bg-success text-white" asp-controller="Event" asp-action="CreatePost">Create Event</a>
         <a href="/Course/Details?id=@Model.CourseId" class="btn bg-success text-white">Back To Course</a>
+    </div>
+</form>*@
+
+
+<form method="post" asp-controller="Event" asp-action="CreatePost" asp-route-courseId="@Model.CourseId">
+    <div>
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Date"></label>
+        <input type="datetime" asp-for="Date" class="form-control">
+        <span asp-validation-for="Date" class="text-danger"></span>
+    </div>
+    <hr class="bg-success mt-5" style="height: 2px" />
+    <div class="d-flex justify-content-around mt-4">
+        <button type="submit" class="btn bg-success text-white" href="/Event/CreatePost?courseId=@Model.CourseId">Create</button>
+        <a href="/Event/All" class="btn bg-success text-white">Back To Courses</a>
     </div>
 </form>
