--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
@@ -4,8 +4,8 @@
 }
 
 @*<div class="text-center">
-    <h1 class="display-4">All Courses!</h1>
-</div>*@
+        <h1 class="display-4">All Courses!</h1>
+    </div>*@
 
 <hr class="bg-success" style="height: 2px" />
 <main>
@@ -18,6 +18,9 @@
             <h3>
                 <a href="/Event/Details?id=@item.Id">@item.Name</a>
             </h3>
+            <div class="justify-content-end">
+                <a class="btn btn-success text-white float-lg-right" href="/Event/Delete?id=@item.Id">Delete</a>
+            </div>
         }
     </div>
 </main>
