--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/All.cshtml
@@ -14,9 +14,12 @@
     <div id="albums">
         @foreach (var homework in Model.Homeworks)
         {
-            <h3>
-                <a href="/Homework/Details?id=@homework.Id">@homework.Name</a>
-            </h3>
+            <div>
+                <h3>
+                    <a href="/Homework/Details?id=@homework.Id">@homework.Name</a>
+                </h3>
+                <a class="btn btn-success text-white float-lg-right" href="/Homework/Delete?id=@homework.Id">Delete</a>
+            </div>
         }
     </div>
 </main>
