--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
@@ -14,6 +14,9 @@
         <div class="card-header">Event Date: @Model.Date</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Event" asp-action="All">Back To All</a>
+            @*<a class="btn bg-success text-white" asp-controller="Event" asp-action="Edit" asp-route-eventId="@Model.Id">Edit</a>*@
+            <a class="nav-link bg-success text-white" href="/Event/Edit?eventId=@Model.Id">Edit</a>
+            @*<button class="btn bg-success text-white" href="/Event/Edit?eventId=@Model.Id">Edit</button>*@
         </div>
     </div>
 </div>
