--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
@@ -15,6 +15,7 @@
         <div class="card-header">Event Date: @Model.Condition</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Exercise" asp-action="All">Back To All</a>
+            <a class="nav-link bg-success text-white" href="/Exercise/Edit?exerciseId=@Model.Id">Edit</a>
         </div>
     </div>
 </div>
