--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
@@ -12,6 +12,8 @@
         <div class="card-header">Event Date: @Model.Description</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Homework" asp-action="All">Back To All</a>
+            @*<button type="submit" class="btn bg-success text-white" href="/Homework/Edit?homeworkId=@Model.Id">Edit</button>*@
+            <a class="nav-link bg-success text-white" href="/Homework/Edit?homeworkId=@Model.Id">Edit</a>
             <a class="nav-link bg-success text-white" asp-area="" asp-controller="Exercise" asp-action="Create" asp-route-homeworkId="@Model.Id">Create Exercise</a>
         </div>
     </div>
