--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
@@ -17,6 +17,7 @@
         <div class="card-header">Course Description: @Model.Description</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Course" asp-action="All">Back To All</a>
+            <a class="nav-link bg-success text-white" href="/Course/Edit?courseId=@Model.Id">Edit</a>
             <a class="nav-link bg-success text-white" href="/Event/Create?courseId=@Model.Id">Create Event</a>
             <a class="nav-link bg-success text-white" asp-area="" asp-controller="Homework" asp-action="Create" asp-route-courseId="@Model.Id">Create Homework</a>
         </div>
