--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <environment names="Development">
         <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/bootstrap-datepicker/css/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
     </environment>
     <environment names="Staging,Production">
         <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
@@ -80,6 +81,9 @@
         <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+        <script src="~/bootstrap-datepicker/locales/bootstrap-datepicker.it.min.js"></script>
+        <script src="~/js/datepicker-init.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
