--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
@@ -9,17 +9,17 @@
 </div>
 <hr />
 <div class="blog margin-bottom-40 d-flex justify-content-between">
-    <div class="course-data col-md-5">
+    <div class="course-data justify-content-center col-md-9">
         <div class="card-header">Course Name: @Model.Name</div>
         <div class="card-header">Course StartOn: @Model.StartOn</div>
         <div class="card-header">Course EndOn: @Model.EndOn</div>
         <div class="card-header">Course Duration: @Model.Duration</div>
         <div class="card-header">Course Description: @Model.Description</div>
         <div class="d-flex justify-content-between">
-            <a class="btn bg-success text-white" asp-controller="Course" asp-action="All">Back To All</a>
-            <a class="nav-link bg-success text-white" href="/Course/Edit?courseId=@Model.Id">Edit</a>
-            <a class="nav-link bg-success text-white" href="/Event/Create?courseId=@Model.Id">Create Event</a>
-            <a class="nav-link bg-success text-white" asp-area="" asp-controller="Homework" asp-action="Create" asp-route-courseId="@Model.Id">Create Homework</a>
+            <a class="btn bg-success text-white asd" asp-controller="Course" asp-action="All">Back To All</a>
+            <a class="nav-link bg-success text-white asd" href="/Course/Edit?courseId=@Model.Id">Edit</a>
+            <a class="nav-link bg-success text-white asd" href="/Event/Create?courseId=@Model.Id">Create Event</a>
+            <a class="nav-link bg-success text-white asd" asp-area="" asp-controller="Homework" asp-action="Create" asp-route-courseId="@Model.Id">Create Homework</a>
         </div>
     </div>
 </div>
