--- a/C#/Web Project/Web/StudentsSystem.Web/wwwroot/css/site.css
+++ b/C#/Web Project/Web/StudentsSystem.Web/wwwroot/css/site.css
@@ -54,3 +54,8 @@ body {
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
 }
+
+.asd {
+    border-radius: 10%;
+    margin-top: 10px;
+}
