--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Create.cshtml
@@ -20,13 +20,13 @@
 
     <div>
         <label asp-for="StartOn"></label>
-        <input type="datetime" asp-for="StartOn" class="form-control" id="datepicker">
+        <input type="text" asp-for="StartOn" class="form-control" id="datepicker">
         <span asp-validation-for="StartOn" class="text-danger"></span>
     </div>
 
     <div>
         <label asp-for="EndOn"></label>
-        <input type="datetime" asp-for="EndOn" class="form-control" id="datepicker">
+        <input type="text" asp-for="EndOn" class="datepicker form-control" id="second">
         <span asp-validation-for="EndOn" class="text-danger"></span>
     </div>
 
