--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Old.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Old.cshtml
@@ -12,7 +12,7 @@
         {
             <div>
                 <h3>
-                    <a href="/Course/Details?id=@course.Id">@course.Name</a>
+                    <a href="/Course/OldCourseDetails?id=@course.Id">@course.Name</a>
                 </h3>
                 <a class="btn btn-success text-white float-lg-right" href="/Course/Delete?id=@course.Id">Delete</a>
             </div>
