--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
@@ -11,7 +11,7 @@
 <div class="course-details d-flex justify-content-between row">
     <div class="course-data col-md-5">
         <div class="card-header">Event Name: @Model.Name</div>
-        <div class="card-header">Event Date: @Model.Date</div>
+        <div class="card-header">Event Date: @Convert.ToDateTime(@Model.Date).ToString("dd-MM-yyyy")</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Event" asp-action="All">Back To All</a>
             <a class="nav-link bg-success text-white" href="/Event/Edit?eventId=@Model.Id">Edit</a>
