--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
@@ -11,8 +11,8 @@
 <hr />
 <div class="course-details d-flex justify-content-between row">
     <div class="course-data col-md-5">
-        <div class="card-header">Event Name: @Model.Name</div>
-        <div class="card-header">Event Date: @Model.Condition</div>
+        <div class="card-header">Exercise Name: @Model.Name</div>
+        <div class="card-header">Exercise Condition: @Model.Condition</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Exercise" asp-action="All">Back To All</a>
             <a class="nav-link bg-success text-white" href="/Exercise/Edit?exerciseId=@Model.Id">Edit</a>
