--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
@@ -7,9 +7,9 @@
 
 <div class="course-details d-flex justify-content-between row">
     <div class="course-data col-md-5">
-        <div class="card-header">Event Name: @Model.Name</div>
-        <div class="card-header">Event Date: @Model.EndDate</div>
-        <div class="card-header">Event Date: @Model.Description</div>
+        <div class="card-header">Homework Name: @Model.Name</div>
+        <div class="card-header">Homework Date: @Convert.ToDateTime(@Model.EndDate).ToString("dd-MM-yyyy")</div>
+        <div class="card-header">Homework Description: @Model.Description</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Homework" asp-action="All">Back To All</a>
             @*<button type="submit" class="btn bg-success text-white" href="/Homework/Edit?homeworkId=@Model.Id">Edit</button>*@
