--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/All.cshtml
@@ -8,6 +8,8 @@
     </div>*@
 
 <hr class="bg-success" style="height: 2px" />
+@{ 
+    var id = "";
 <main>
     <h1>All Events</h1>
     <hr class="bg-success" style="height: 2px" />
@@ -15,12 +17,35 @@
     <div id="albums">
         @foreach (var item in Model.Events)
         {
+            id = item.Id;
             <h3>
                 <a href="/Event/Details?id=@item.Id">@item.Name</a>
             </h3>
-            <div class="justify-content-end">
-                <a class="btn btn-success text-white float-lg-right" href="/Event/Delete?id=@item.Id">Delete</a>
+            <div class="text-center">
+                <a href="#myModal" class="trigger-btn btn btn-success" data-toggle="modal">Delete</a>
             </div>
         }
     </div>
+
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="icon-box">
+                        <i class="material-icons">&#xE5CD;</i>
+                    </div>
+                    <h4 class="modal-title">Are you sure?</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Do you really want to delete these records? This process cannot be undone.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                    <a href="/Event/Delete?id=@id" class="btn btn-success text-white float-lg-right">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
+}
